--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 blinker==1.4
-click==8.0.0
-Flask==2.0.0
-Flask-DebugToolbar==0.11.0
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.0
-itsdangerous==2.0.0
-Jinja2==3.0.0
-MarkupSafe==2.0.0
-psycopg2-binary==2.8.6
-SQLAlchemy==1.4.15
-Werkzeug==2.0.0
+Click==7.0
+Flask==1.0.2
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+psycopg2-binary==2.7.6.1
+SQLAlchemy==1.2.14
+Werkzeug==0.14.1
